--- a/java/app/src/main/res/layout/activity_movies.xml
+++ b/java/app/src/main/res/layout/activity_movies.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.movies.MoviesActivity">
 
-    <!--<androidx.recyclerview.widget.RecyclerView-->
-        <!--android:id="@+id/rvMovies"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" />-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvMovies"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/tvErrMessage"
