--- a/kotlin-rx/app/src/main/res/layout/item_movie.xml
+++ b/kotlin-rx/app/src/main/res/layout/item_movie.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="256dp">
 
     <ImageView
             android:id="@+id/ivPoster"
@@ -16,7 +16,7 @@
     <android.support.constraint.ConstraintLayout
             android:id="@+id/infoContainer"
             android:layout_width="match_parent"
-            android:layout_height="108dp"
+            android:layout_height="72dp"
             android:background="@color/transparent"
             app:layout_constraintBottom_toBottomOf="parent">
 
@@ -50,8 +50,9 @@
                 android:layout_marginEnd="16dp"
                 android:textColor="@color/colorAccent"
                 style="@style/Base.TextAppearance.AppCompat.Title"
-                app:layout_constraintTop_toTopOf="@id/tvTitle"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 tools:text="4.5"/>
     </android.support.constraint.ConstraintLayout>
 
