--- a/kotlin-rx/app/src/main/res/values/colors.xml
+++ b/kotlin-rx/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryVeryLight">#f0f0f0</color>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryVeryLight">#F5F5F5</color>
+    <color name="colorPrimary">#9E9E9E</color>
+    <color name="colorPrimaryDark">#616161</color>
+    <color name="colorAccent">#FF9800</color>
     <color name="transparent">#AAFFFFFF</color>
 </resources>
