--- a/kotlin-rx/app/src/main/res/layout/item_movie.xml
+++ b/kotlin-rx/app/src/main/res/layout/item_movie.xml
@@ -4,14 +4,13 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="256dp">
+        android:layout_height="match_parent">
 
     <ImageView
             android:id="@+id/ivPoster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:scrollY="-100dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
