--- a/kotlin-databinding-coroutine-aac/app/src/main/res/layout/activity_details.xml
+++ b/kotlin-databinding-coroutine-aac/app/src/main/res/layout/activity_details.xml
@@ -1,23 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.youknow.movie.ui.details.DetailsViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.nowplaying.NowPlayingFragment">
 
-    <ProgressBar
+        <ProgressBar
             android:id="@+id/movieProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            goneUnless="@{viewModel.isLoading()}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
+        <TextView
             android:id="@+id/tvErrMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -28,81 +36,86 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ScrollView
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
-            <ImageView
+                <ImageView
                     android:id="@+id/ivPoster"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:imageUrl="@{viewModel.movie.posterPath}"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
+                <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvGenres"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
                     app:layout_constraintTop_toBottomOf="@id/ivPoster"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/tvVoteAvg"/>
+                    app:layout_constraintEnd_toStartOf="@id/tvVoteAvg" />
 
-            <TextView
+                <TextView
                     android:id="@+id/tvVoteAvg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:text="@{String.valueOf(viewModel.movie.voteAverage)}"
                     android:textColor="@color/colorAccent"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintTop_toTopOf="@id/rvGenres"
                     app:layout_constraintBottom_toBottomOf="@id/rvGenres"
                     app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="8.5"/>
+                    tools:text="8.5" />
 
-            <TextView
+                <TextView
                     android:id="@+id/tvReleaseDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
+                    android:text="@{viewModel.movie.releaseDate}"
                     android:textColor="@android:color/black"
                     app:layout_constraintTop_toBottomOf="@id/rvGenres"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:text="2019-03-01"/>
+                    tools:text="2019-03-01" />
 
-            <TextView
+                <TextView
                     android:id="@+id/tvRuntime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
+                    android:text="@{@string/runtime_args(viewModel.movie.runtime)}"
                     android:textColor="@android:color/black"
                     app:layout_constraintTop_toTopOf="@id/tvReleaseDate"
                     app:layout_constraintStart_toEndOf="@id/tvReleaseDate"
-                    tools:text="runtime: 120m"/>
+                    tools:text="runtime: 120m" />
 
-            <TextView
+                <TextView
                     android:id="@+id/tvTagline"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="36dp"
+                    android:text="@{viewModel.movie.tagline}"
                     android:textAlignment="center"
                     android:textStyle="italic"
                     app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
                     app:layout_constraintStart_toStartOf="@id/tvReleaseDate"
                     app:layout_constraintEnd_toEndOf="@id/tvVoteAvg"
                     style="@style/TextAppearance.AppCompat.Headline"
-                    tools:text="How much can you know about yourself if you've never been in a fight?"/>
+                    tools:text="How much can you know about yourself if you've never been in a fight?" />
 
-            <TextView
-                    android:id="@+id/tvOverviewLabel"
+                <TextView
+                    android:id="@+id/labelOverview"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="36dp"
@@ -112,20 +125,22 @@
                     android:visibility="gone"
                     app:layout_constraintTop_toBottomOf="@id/tvTagline"
                     app:layout_constraintStart_toStartOf="@id/tvReleaseDate"
-                    app:layout_constraintEnd_toEndOf="@id/tvVoteAvg"/>
+                    app:layout_constraintEnd_toEndOf="@id/tvVoteAvg" />
 
-            <TextView
+                <TextView
                     android:id="@+id/tvOverview"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="36dp"
-                    app:layout_constraintTop_toBottomOf="@id/tvOverviewLabel"
+                    android:text="@{viewModel.movie.overview}"
+                    app:layout_constraintTop_toBottomOf="@id/labelOverview"
                     app:layout_constraintStart_toStartOf="@id/tvReleaseDate"
                     app:layout_constraintEnd_toEndOf="@id/tvVoteAvg"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    tools:text="Overview"/>
+                    tools:text="Overview" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
