--- a/kotlin-databinding-coroutine-aac/app/src/main/res/layout/activity_details.xml
+++ b/kotlin-databinding-coroutine-aac/app/src/main/res/layout/activity_details.xml
@@ -4,6 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.youknow.movie.ui.details.DetailsViewModel" />
@@ -43,8 +45,10 @@
             android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                contentsVisibility="@{viewModel.isLoading()}">
 
                 <ImageView
                     android:id="@+id/ivPoster"
@@ -60,6 +64,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
+                    genres="@{viewModel.movie.genres}"
                     app:layout_constraintTop_toBottomOf="@id/ivPoster"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tvVoteAvg" />
@@ -108,6 +113,7 @@
                     android:text="@{viewModel.movie.tagline}"
                     android:textAlignment="center"
                     android:textStyle="italic"
+                    android:visibility="@{viewModel.movie.tagline.length() == 0 ? View.GONE : View.VISIBLE}"
                     app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
                     app:layout_constraintStart_toStartOf="@id/tvReleaseDate"
                     app:layout_constraintEnd_toEndOf="@id/tvVoteAvg"
@@ -122,7 +128,6 @@
                     android:layout_marginBottom="16dp"
                     android:text="@string/overview"
                     android:textColor="@android:color/black"
-                    android:visibility="gone"
                     app:layout_constraintTop_toBottomOf="@id/tvTagline"
                     app:layout_constraintStart_toStartOf="@id/tvReleaseDate"
                     app:layout_constraintEnd_toEndOf="@id/tvVoteAvg" />
